--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -42,6 +42,10 @@
   "permission": {
     "scope.userInfo": {
       "desc": "用于展示用户信息"
-    }
-  }
+    },
+    "scope.userLocation": {
+        "desc": "你的位置信息将用于小程序位置接口的效果展示"
+      }
+  },
+  "requiredPrivateInfos": ["getLocation"]
 }
