--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,9 @@
   "pages": [
     "pages/index/index",
     "pages/post/index",
-    "pages/user-center/index"
+    "pages/user-center/index",
+    "pages/zhaopin/index/index",
+    "pages/qiuzhi/index/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
