--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,14 +1,15 @@
 {
   "pages": [
-    
+    "pages/publishJobSeeking/publishJobSeeking",
     "pages/recruiter/recruiter",
     "pages/jobseeker/jobseeker",
     "pages/user-center/index",
     "pages/post/index",
     "pages/publishJobPost/publishJobPost",
-    "pages/publishJobSeeking/publishJobSeeking",
+    
     "pages/question/question",
-    "pages/detail/detail"
+    "pages/jobDetail/jobDetail",
+    "pages/talentDetail/talentDetail"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
