--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,6 +9,7 @@
     "pages/publishJobSeeking/publishJobSeeking",
     "pages/question/question",
     "pages/jobDetail/jobDetail",
+    "pages/resumeDetail/resumeDetail",
     "pages/talentDetail/talentDetail"
   ],
   "window": {
