3，23，更换icon，修改类别和职务

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -34,8 +34,8 @@
       {
         "pagePath": "pages/jobseeker/jobseeker",
         "text": "找人",
-        "iconPath": "images/icons/home.png",
-        "selectedIconPath": "images/icons/home-active.png"
+        "iconPath": "images/icons/findman.png",
+        "selectedIconPath": "images/icons/findman-active.png"
       },
       {
         "pagePath": "pages/post/index",
